--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/router": "3.2.3",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.15",
+    "angular2-jwt": "^0.1.27",
+    "auth0-lock": "^10.7.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.1",
     "rxjs": "5.0.0-beta.12",
